# ElectionCalculatorPlusPlus

./: CMakeLists.txt  backlog.md  election.cpp  election.h  electiontype.h  extraseatsstrategy.h  levelingstrategy.h  mainwindow.ui  party.cpp  party.h  seatallocation.cpp  seatallocation.h  votecount.cpp  votecount.h
ElectionCalculatorTests/: CMakeLists.txt  tst_calculationtests.cpp
